@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- Filters and backends may now report the total number
+	  of pages ("PAGE: total NNN") to the scheduler.
 	- The LPD backend now supports timeout and
 	  sanitize_title options (default to 300 and yes,
 	  respectively) and has some additional changes to
